Added changes for email, service manager, mechanic

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     <script>
         // API Configuration
-        const API_BASE_URL = 'http://localhost:9004';
+        const API_BASE_URL = 'http://15.206.210.157:9004';
         
         // DOM Elements
         const fileInput = document.getElementById('file-input');
